--- a/src/app/pages/public-profile/public-profile.page.html
+++ b/src/app/pages/public-profile/public-profile.page.html
@@ -13,7 +13,7 @@
         <div class="end status" slot="end">
           <ion-label
             class="text-card text-status text-small">
-            {{ userWink && userWink.status ? userWink.status : 'Disponible'}}
+            {{ userWink && userWink.status ? userWink.status : 'WINK.STATUS.AVAILABLE' | translate}}
           </ion-label>
         </div>
       </ion-toolbar>
@@ -23,7 +23,8 @@
     
     <ion-img 
       class="public-img img-avatar"
-      [src]="userWink ? userWink.avatarUrl : ''">
+      (ionError)="ErrorImagen()" 
+      [src]="Avatar()">
     </ion-img>
     <div class="text-bottom">
       <ion-label  class="public-name text-card" >
