--- a/src/app/pages/private-profiles/private-profiles.page.html
+++ b/src/app/pages/private-profiles/private-profiles.page.html
@@ -8,7 +8,9 @@
       ></fa-icon>
       <ion-ripple-effect></ion-ripple-effect>
     </div>
-    <ion-title>Private Profiles</ion-title>
+    <ion-title>
+      {{'WINK.PRIVATE_PROFILES.TITLE' | translate}}
+    </ion-title>
     <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mie" slot="end" >
       <fa-icon 
         [icon]="['far', 'save']" 
@@ -24,7 +26,10 @@
 <ion-content class="ion-padding">
   <div class="contenedorAvatar" >
     <ion-avatar class="avatar-profile"> 
-      <ion-img [src]="userWink ? userWink.avatarUrl : ''" class="img-avatar"></ion-img>
+      <ion-img 
+      (ionError)="ErrorImagen()" 
+      [src]="Avatar()" 
+      class="img-avatar"></ion-img>
     </ion-avatar>
   </div>
 
@@ -35,7 +40,7 @@
   </div>
   <ion-list *ngFor="let section of items; let i = index;" >
     <ion-list-header *ngIf="section.length > 0">
-      <ion-label>{{sections[i + 1].name}}</ion-label>
+      <ion-label>{{sections[i + 1].name | translate}}</ion-label>
     </ion-list-header>
     <item-list 
       *ngFor="let item of section"
