--- a/src/app/pages/profile-settings/profile-settings.page.scss
+++ b/src/app/pages/profile-settings/profile-settings.page.scss
@@ -30,3 +30,21 @@ button {
 .pad-let-10 {
   padding-left: 10px;
 }
+
+.skeleton-section {
+  width: 100%; 
+  height: 45px;
+}
+.skeleton-bio-label {
+  width: 50%;
+}
+
+.skeleton-bio-content {
+  width: 80%; 
+  height: 50px;
+}
+
+.skeleton-avatar {
+  width: 30%; 
+  height: 30px;
+}
