--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -54,7 +54,7 @@
         </ion-avatar>
       </div>
       <div class="content-center" >
-          <ion-skeleton-text animated class="skeleton-avatar"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-name"></ion-skeleton-text>
       </div>
       <ion-item>
         <ion-thumbnail slot="start">
