--- a/src/app/pages/public-profile/public-profile.page.scss
+++ b/src/app/pages/public-profile/public-profile.page.scss
@@ -58,3 +58,12 @@
   top: 0px;
   left: 0px;
 }
+
+.skeleton-content-text {
+  width: 50%;
+}
+
+.skeleton-name-public {
+  width: 50%;
+  height: 40px;
+}
