--- a/src/app/pages/private-profiles/private-profiles.page.html
+++ b/src/app/pages/private-profiles/private-profiles.page.html
@@ -11,7 +11,7 @@
     <ion-title>
       {{'WINK.PRIVATE_PROFILES.TITLE' | translate}}
     </ion-title>
-    <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mie" slot="end" >
+    <div *ngIf="!load" class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mie" slot="end" >
       <fa-icon 
         [icon]="['far', 'save']" 
         class="icono-arrow"
@@ -24,27 +24,132 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <div class="contenedorAvatar" >
-    <ion-avatar class="avatar-profile"> 
-      <ion-img 
-      (ionError)="ErrorImagen()" 
-      [src]="Avatar()" 
-      class="img-avatar"></ion-img>
-    </ion-avatar>
+  <div *ngIf="load">
+    <div class="contenedorAvatar" >
+      <ion-avatar class="avatar-profile"> 
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
+    </div>
+    <div class="content-center" >
+      <ion-skeleton-text animated class="skeleton-name"></ion-skeleton-text>
+    </div>
+    <ion-list>
+      <ion-list-header >
+        <ion-skeleton-text animated class="skeleton-title-list"></ion-skeleton-text>
+      </ion-list-header>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-list-header >
+        <ion-skeleton-text animated class="skeleton-title-list"></ion-skeleton-text>
+      </ion-list-header>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-list-header >
+        <ion-skeleton-text animated class="skeleton-title-list"></ion-skeleton-text>
+      </ion-list-header>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+    
   </div>
-
-  <div class="contenedor" >
-    <ion-title class="title-name">
-      {{userWink ? userWink.firstName + ' ' + userWink.lastName : 'John Doe'}}
-    </ion-title>
-  </div>
-  <ion-list *ngFor="let section of items; let i = index;" >
-    <ion-list-header *ngIf="section.length > 0">
-      <ion-label>{{sections[i + 1].name | translate}}</ion-label>
-    </ion-list-header>
-    <item-list 
-      *ngFor="let item of section"
-      [item]="item.item">
-    </item-list>
-  </ion-list>
+  <div *ngIf="!load">
+    <div class="contenedorAvatar" >
+      <ion-avatar class="avatar-profile"> 
+        <ion-img 
+        (ionError)="ErrorImagen()" 
+        [src]="Avatar()" 
+        class="img-avatar"></ion-img>
+      </ion-avatar>
+    </div>
+    
+    <div class="contenedor" >
+      <ion-title class="title-name">
+        {{userWink ? userWink.firstName + ' ' + userWink.lastName : 'John Doe'}}
+      </ion-title>
+    </div>
+    <ion-list *ngFor="let section of items; let i = index;" >
+      <ion-list-header *ngIf="section.length > 0">
+        <ion-label>{{sections[i + 1].name | translate}}</ion-label>
+      </ion-list-header>
+      <item-list 
+        *ngFor="let item of section"
+        [item]="item.item">
+      </item-list>
+    </ion-list>
+  </div>  
 </ion-content>
