--- a/src/app/pages/public-profile/public-profile.page.html
+++ b/src/app/pages/public-profile/public-profile.page.html
@@ -11,16 +11,28 @@
           <ion-ripple-effect></ion-ripple-effect>
         </div>
         <div class="end status" slot="end">
-          <ion-label
-            class="text-card text-status text-small">
-            {{ userWink && userWink.status ? userWink.status : 'WINK.STATUS.AVAILABLE' | translate}}
-          </ion-label>
+          <ion-label *ngIf="!load"
+          class="text-card text-status text-small">
+          {{ userWink && userWink.status ? userWink.status : 'WINK.STATUS.AVAILABLE' | translate}}
+        </ion-label>
         </div>
       </ion-toolbar>
     </ion-header>
   </ion-fab>
-  <div class="contenedor-card total">
-    
+  <div class="contenedor-card total" *ngIf="load">
+    <ion-skeleton-text animated class="public-img img-avatar"></ion-skeleton-text>
+    <div class="text-bottom skeleton-content-text">
+        <ion-skeleton-text animated class="skeleton-name-public"></ion-skeleton-text>
+        <ion-skeleton-text animated class="skeleton-name"></ion-skeleton-text>
+    </div>    
+    <ion-fab class="button-wink end">
+      <ion-avatar class="button-float-skeleton"> 
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
+    </ion-fab>
+  </div>
+
+  <div class="contenedor-card total" *ngIf="!load">
     <ion-img 
       class="public-img img-avatar"
       (ionError)="ErrorImagen()" 
@@ -34,7 +46,7 @@
           {{userWink ? (userWink.distance | distance) : ''}}
       </ion-label>
     </div>    
-    <ion-fab *ngIf="load" class="button-wink end">
+    <ion-fab *ngIf="!load" class="button-wink end">
       <div *ngIf="wink" class="end">
           <ion-fab-button *ngIf="!send && !wink.approved" (click)="AceptWink()" size="small" color="primary">
               <ion-icon name="checkmark"></ion-icon>
@@ -60,6 +72,53 @@
       </ion-fab-button>
     </ion-fab>
   </div>
+  <ion-list *ngIf="load">
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-skeleton-text animated class="skeleton-label"></ion-skeleton-text>
+          <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+        </ion-label>
+      </ion-item>
+    </ion-list>
   <ion-list>
     <item-list *ngFor="let item of publicItems"
       [item]="item"></item-list>
