--- a/src/global.scss
+++ b/src/global.scss
@@ -251,3 +251,30 @@
   border-radius: 9%;
   height: 220px;
 }
+
+.skeleton-name {
+  width: 30%;
+  height: 30px;
+}
+
+.skeleton-avatar {
+  width: 30%; 
+  height: 30px;
+}
+.skeleton-label {
+  width: 30%;
+}
+
+.skeleton-title-list {
+  width: 15%;
+  height: 15px;
+}
+
+.skeleton-content {
+  width: 80%; 
+  height: 25px;
+}
+
+.skeleton-button {
+  height: 30px;
+}
