--- a/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
+++ b/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
@@ -17,7 +17,7 @@
     position="floating" 
     class="padding-left-10"
     *ngIf="itemType">
-    {{itemType? itemType.description : ''}}
+    {{(itemType? itemType.description : '') | translate}}
   </ion-label>
 
   <!--Columna con dos inputs, el primero aparece cuando el item solo acepta un valor, el segundo cuando el item acepta dos valores-->
@@ -27,7 +27,7 @@
     <!--Primer input-->
     <ion-input 
     *ngIf="itemType && itemType.index === 0 || itemType.index === 2 || itemType.index === 1 ||  itemType.index === 3 ||  itemType.index === 6 ||  itemType.index === 7"  
-    [placeholder]="MarcaAgua(0)" 
+    [placeholder]="MarcaAgua(0) | translate" 
     class="input-item"
     (ionInput)="onInput($event.target.value, 0)"
     [value]="Valor(0)"
@@ -41,7 +41,7 @@
     <ion-input 
     *ngIf="itemType && itemType.index === 2  || itemType.index === 7 " 
     class="input-item"
-    [placeholder]="MarcaAgua(1)"
+    [placeholder]="MarcaAgua(1) | translate"
     [value]="Valor(1)"
     (ionInput)="onInput($event.target.value, 1)"
     [disabled]="isDisabled"
@@ -64,7 +64,7 @@
     <ion-select-option
     *ngFor="let option of itemType.options"
     [value]="option._id">
-      {{option.name}}
+      {{option.name | translate}}
     </ion-select-option>
   </ion-select>
 
@@ -75,7 +75,7 @@
   displayFormat="DD/MM/YYYY" 
   min="1900-01-01" 
   [max]="FechaActual() | date:'yyy-MM-dd'"  
-  [value]="Valor(0)? Valor(0) : null | date:'MM-dd-yyyy'"
+  [value]="Valor(0)? (Valor(0) | date:'MM-dd-yyyy') : null "
   cancel-text="Cancelar" 
   done-text="Aceptar" 
   (ionChange)="onInput($event.target.value, 0)"
@@ -105,7 +105,7 @@
       
     <input 
     class="native-input sc-ion-input-md sc-ion-input-ios placeholder"
-    [placeholder]="MarcaAgua(0)"
+    [placeholder]="MarcaAgua(0)  | translate"
     (focus)="Focus(true)"
     (blur)="Focus(false)"
     autocomplete="off"
@@ -134,7 +134,7 @@
   class="select-type input-relative"
   interface="popover" 
   [value]="itemType" 
-  placeholder="Seleccione una opcion" 
+  [placeholder]="'WINK.PROFILE_SETTINGS.OPTIONS.SELECT_ITEMS' | translate" 
   (ionChange)="SelecionarTipoItem($event.target.value)"  
   formControlName="selector"
   >
@@ -142,10 +142,10 @@
     *ngFor="let item of tiposItems" 
     [disabled]="Unicos(item)" 
     [value]="item">
-      {{item.description}}
+      {{item.description | translate}}
     </ion-select-option>
   </ion-select>
 </ion-item>
 <ion-text color="danger">
-  {{ErrorMessage()}}
+  {{ErrorMessage() | translate}}
 </ion-text>
